[metadata]
name = ecoglib
version = 0.1.0
author = mike t
author_email = mtrumpis@gmail.com
license = BSD 3-Clause
license_file = LICENSE
url = https://bitbucket.org/tneuro/ecoglib/src/master/
description = tools for Viventi Lab ecog analysis

[options]
packages = find:
python_requires = >=3.7
install_requires =
    ipython
    matplotlib
    # still doesn't build in pip ???
    # mayavi>=4.7.0
    nitime>=0.9
    numpy>=1.18.0
    pyface>=7.0.0
    QtPy
    scipy
    seaborn
    statsmodels
    tqdm
    traits>=6.0.0
    traitsui>=7.0.0
    # also source installation
    ecogdata @ git+https://github.com/miketrumpis/ecogdata.git
    # ecogdata @ git+ssh://git@github.com/miketrumpis/ecogdata.git

;[options.packages.find]
;exclude = scratch

[options.extras_require]
pyqt =
    PyQt5>=5.13.0

pyside2 =
    PySide2>=5.13.0

test =
    pytest

test_all =
    pytest
    coverage[toml]

docs =
    Sphinx
    sphinx-rtd-theme
    ipykernel
    jupyter
    nbsphinx

